<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="20dp">

    <ImageView
        android:id="@+id/MatchImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/profile_icon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="10dp">

        <TextView
            android:id="@+id/userID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="5dp"
            android:text="@string/item_matches_user_id"
            android:textColor="@android:color/black"
            app:fontFamily="@font/pt_sans_regular" />

        <TextView
            android:id="@+id/debateCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="5dp"
            android:text="@string/item_matches_debata"
            android:textColor="@android:color/black"
            app:fontFamily="@font/pt_sans_regular" />

        <TextView
            android:id="@+id/userUniqueID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/item_matches_unique_id"
            android:textColor="@android:color/black"
            android:textSize="1sp"
            android:visibility="invisible"
            app:fontFamily="@font/pt_sans_regular" />
    </LinearLayout>

</LinearLayout>