<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <ImageView
        android:id="@+id/settingsProfilePicture"
        android:layout_width="120dp"
        android:layout_height="115dp"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile_icon" />

    <TextView
        android:id="@+id/settingsLabelName"
        android:layout_width="54dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="176dp"
        android:layout_marginBottom="8dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/settings_label_name"
        android:textSize="18sp"
        android:textStyle="bold"
        android:windowSoftInputMode="stateHidden"
        app:layout_constraintBottom_toTopOf="@+id/settingsUsername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047" />

    <EditText
        android:id="@+id/settingsName"
        android:layout_width="202dp"
        android:layout_height="26dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@null"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/hint_name"
        android:singleLine="true"
        android:textSize="18sp"
        android:windowSoftInputMode="stateHidden"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toEndOf="@+id/settingsLabelName"
        app:layout_constraintTop_toBottomOf="@+id/settingsProfilePicture" />

    <TextView
        android:id="@+id/settingsLabelUsername"
        android:layout_width="88dp"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/settings_label_username"
        android:textSize="18sp"
        android:textStyle="bold"
        android:windowSoftInputMode="stateHidden"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsLabelName" />

    <EditText
        android:id="@+id/settingsUsername"
        android:layout_width="199dp"
        android:layout_height="26dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="224dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@null"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/hint_username"
        android:singleLine="true"
        android:textSize="18sp"
        android:windowSoftInputMode="stateHidden"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/settingsLabelUsername"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/settingsLabelEmail"
        android:layout_width="56dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/settings_label_email"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsLabelUsername" />

    <TextView
        android:id="@+id/settingsEmail"
        android:layout_width="259dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@null"
        android:text="@string/hint_email"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/settingsLabelEmail"
        app:layout_constraintTop_toBottomOf="@+id/settingsUsername" />

    <!--<TextView
        android:id="@+id/notifications"
        android:layout_width="170dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="160dp"
        android:background="@null"
        android:text="@string/enable_notifications"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsLabelEmail"
        app:layout_constraintVertical_bias="1.0" />

    <CheckBox
        android:id="@+id/notificationCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:layout_marginBottom="160dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/notifications"
        app:layout_constraintTop_toBottomOf="@+id/settingsEmail"
        app:layout_constraintVertical_bias="1.0" />-->

    <Button
        android:id="@+id/settingsConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginLeft="76dp"
        android:layout_marginBottom="60dp"
        android:text="@string/settings_confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/settingsBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:layout_marginBottom="60dp"
        android:text="@string/settings_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toEndOf="@+id/settingsConfirm" />
</android.support.constraint.ConstraintLayout>